remove dbus steps in unit file

--- a/roles/openshift_node_dnsmasq/templates/origin-dns.conf.j2
+++ b/roles/openshift_node_dnsmasq/templates/origin-dns.conf.j2
@@ -2,7 +2,7 @@ no-resolv
 domain-needed
 no-negcache
 max-cache-ttl=1
-enable-dbus
+# enable-dbus
 dns-forward-max=5000
 cache-size=5000
 bind-dynamic
